<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp"
    tools:context=".ui.medication.ServicesFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_select_any"
        android:textSize="@dimen/_12sdp" />

    <Button
        android:id="@+id/chemotherapy_btn"
        style="@style/ButtonStyle"
        android:layout_marginTop="@dimen/_20sdp"
        android:elevation="@dimen/_10sdp"
        android:text="@string/chemotherapy"
         />

    <Button
        android:id="@+id/other_drug_btn"
        style="@style/ButtonStyle"
        android:layout_marginTop="@dimen/_20sdp"
        android:elevation="@dimen/_10sdp"
        android:text="@string/other_drug"
         />

    <Button
        android:id="@+id/side_effect_btn"
        style="@style/ButtonStyle"
        android:layout_marginTop="@dimen/_20sdp"
        android:elevation="@dimen/_10sdp"
        android:text="@string/side_effect_reporting"
         />

</LinearLayout>