<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:id="@+id/login_frag_root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"

    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/whitecell_flower_drawable_bg"
        tools:context=".ui.LoginFragment">

        <!-- Add guideline to align imageView to. -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/title_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <TextView
            android:id="@+id/haemcam_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_guideline"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:text="@string/haecam_str"
            />
        <TextView
            android:id="@+id/haemcam_desc_tv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent=".5"
            app:layout_constraintHeight_percent=".055"
            app:layout_constraintStart_toStartOf="@id/haemcam_tv"
            app:layout_constraintEnd_toEndOf="@id/haemcam_tv"
            app:layout_constraintTop_toBottomOf="@id/haemcam_tv"
            android:textSize="8sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/rounded_corner_purple"
            android:text="@string/haecam_desc_str"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/welcome_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/haemcam_desc_tv"
            app:layout_constraintStart_toStartOf="@id/haemcam_desc_tv"
            app:layout_constraintEnd_toEndOf="@id/haemcam_desc_tv"
            android:text="@string/welcome_back_str"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/login_to_access_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/welcome_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/login_to_access_str"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:imeOptions="actionNext"
            android:textColorHint="@color/white"
            style="@style/textInputLayout.CustomLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/login_to_access_tv"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_address_et"
                style="@style/EditTextCustomStyle"
                android:hint="@string/email_address_str"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:imeOptions="actionNext"
            android:textColorHint="@color/white"
            style="@style/textInputLayout.CustomLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/email_input"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_et"
                style="@style/EditTextCustomStyle"
                android:hint="@string/password_str"
                android:inputType="textPassword"
                android:singleLine="true"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/password_input"
            app:layout_constraintEnd_toEndOf="@id/password_input"
            app:layout_constraintTop_toBottomOf="@id/password_input"
            android:background="@drawable/rounded_corner_purple"
            android:text="@string/login_str"
            android:textAllCaps="false"
            />
        <TextView
            android:id="@+id/forgot_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/login_btn"
            app:layout_constraintEnd_toEndOf="@id/login_btn"
            app:layout_constraintTop_toBottomOf="@id/login_btn"
            android:text="@string/forgot_password_str"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_30sdp"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/signup_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/login_btn"
            app:layout_constraintEnd_toEndOf="@id/login_btn"
            app:layout_constraintTop_toBottomOf="@id/forgot_password_tv"
            android:text="@string/dont_have_account_str"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_20sdp"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
