<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:id="@+id/home_frag_root"
    android:fitsSystemWindows="true"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.main.LandingFragment"
        android:padding="@dimen/_30sdp"
        android:background="@color/primaryVariant">

        <ImageView
            android:id="@+id/home_fragment_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/unboarding_graphics"
            />

        <TextView
            android:id="@+id/let_get_started_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/home_fragment_iv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/lets_get_started"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_30sdp"/>

        <TextView
            android:id="@+id/give_a_snapshot_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing=".1"
            android:lineHeight="@dimen/_20sdp"
            app:layout_constraintTop_toBottomOf="@id/let_get_started_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/give_a_snapshot"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/_10sdp"
            android:gravity="center"
            android:layout_marginTop="@dimen/_10sdp"/>

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_purple"
            android:text="@string/create_an_account"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_30sdp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/give_a_snapshot_tv" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_purple"
            android:text="@string/login_str"
            android:textAllCaps="false"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/sign_up_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
