<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primaryVariant"
    android:paddingStart="@dimen/_20sdp"
    android:paddingEnd="@dimen/_20sdp"
    tools:context=".ui.main.WelcomeFragment">

    <ImageView
        android:id="@+id/success_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_success_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias=".4"
         />
    <TextView
        android:id="@+id/welcome_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        app:layout_constraintTop_toBottomOf="@id/success_icon"
        app:layout_constraintStart_toStartOf="@id/success_icon"
        app:layout_constraintEnd_toEndOf="@id/success_icon"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp"/>

    <TextView
        android:id="@+id/mission_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mission_text"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/welcome_tv"
        app:layout_constraintStart_toStartOf="@id/success_icon"
        app:layout_constraintEnd_toEndOf="@id/success_icon"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"/>

    <Button
        android:id="@+id/continue_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_primary_purple"
        android:text="@string/continue_str"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@id/mission_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>