<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/_10sdp"
    tools:context=".ui.lab.LabResultsFragment">

    <TextView
        android:id="@+id/blood_test_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/blood_test"/>

    <com.skydoves.powerspinner.PowerSpinnerView
        android:id="@+id/year_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/yearly"
        android:textSize="@dimen/_10sdp"
        app:spinner_arrow_gravity="end"
        app:spinner_arrow_tint="@color/black"
        app:spinner_divider_color="@color/black"
        app:spinner_divider_show="false"
        app:spinner_item_array="@array/gender"
        app:spinner_popup_animation="dropdown"
        app:spinner_popup_background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/blood_test_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent=".2"
        app:layout_constraintHorizontal_bias="1"
        app:spinner_popup_elevation="14dp" />
    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/line_chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".5"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/blood_test_tv" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attachment"
        app:layout_constraintBottom_toBottomOf="@id/attach_btn"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_chart"
        app:layout_constraintTop_toTopOf="@id/attach_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/attach_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableRight="@drawable/ic_baseline_add_circle_24"
        android:text="@string/attach"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_chart" />

    <com.airbnb.epoxy.EpoxyRecyclerView
        android:id="@+id/attachment_ercv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/attach_btn"
        tools:itemCount="1"
        tools:listitem="@layout/file_attachment_item" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="textView,attach_btn"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="718dp" />



</androidx.constraintlayout.widget.ConstraintLayout>